--- a/views/artist/show.ejs
+++ b/views/artist/show.ejs
@@ -18,7 +18,7 @@
   <body>
 
       <header>
-        <nav class="navbar navbar-inverse">
+        <nav id="navbar">
             <div class="container-fluid">
 
                 <ul class="nav navbar-left">
@@ -38,50 +38,58 @@
       </header>
 
 
- 	    <main>
-        <div class="container-fluid">
-        <div class="col-lg-12 col-sm-12">
-            <div class="card hovercard">
-                <div class="card-background">
-                    <img class="card-bkimg" alt="<%=artist.name%>'s Avatar" src="<%=artist.img%>">
-                    <!-- Img here-->
-                </div>
-                <div class="card-info">
-                  <span class="card-title"><h3>About <%=artist.name%></h3></span>
 
-                    <% for (let i = 0; i < users.length; i++) { %>
-                      <a href="/artist/addUser/<%=users[i].id%>/<%=artist.id%>">
+        <div class="container-fluid">
+          <div class="col-lg-12 col-sm-12">
+            <div class="row justify-content-around">
+
+              <div class="card hovercard">
+
+
+                  <div class="card-background">
+                    <img class="card-bkimg" alt="<%=artist.name%>'s Avatar" src="<%=artist.img%>">
+                  </div>
+
+                  <div class="card-info"> <span class="card-title"><h3><%=artist.name%></h3></span>
+
+                      <% for (let i = 0; i < users.length; i++) { %>
+                        <a href="/artist/addUser/<%=users[i].id%>/<%=artist.id%>">
                     <% } %>
                       <span class= "glyphicon glyphicon-heart"></span> Like <%=artist.name%></a>
-
-
                 </div>
-
             </div>
+          </div>
+
             <div class="btn-pref btn-group btn-group-justified btn-group-lg" role="group" aria-label="...">
                 <div class="btn-group" role="group">
-                    <button type="button" id="stars" class="btn btn-primary" href="#tab1" data-toggle="tab"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+                    <button type="button" id="stars" class="btn btn-dark" href="#tab1" data-toggle="tab"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>
                         <div class="hidden-xs">About</div>
                     </button>
+
                 </div>
+
                 <div class="btn-group" role="group">
                     <button type="button" id="members" class="btn btn-default" href="#tab2" data-toggle="tab"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
                         <div class="hidden-xs">Members</div>
                     </button>
                 </div>
+
                 <div class="btn-group" role="group">
                     <button type="button" id="createdEvents" class="btn btn-default" href="#tab3" data-toggle="tab"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
                         <div class="hidden-xs">Created Events</div>
                     </button>
                 </div>
+
                 <div class="btn-group" role="group">
                     <button type="button" id="following" class="btn btn-default" href="#tab4" data-toggle="tab"><span class="glyphicon glyphicon-headphones" aria-hidden="true"></span>
                         <div class="hidden-xs">Fans</div>
                     </button>
                 </div>
+
             </div>
 
               <div class="well">
+
                   <div class="tab-content">
 
                     <div class="tab-pane fade in active" id="tab1">
@@ -89,7 +97,6 @@
                           <h6>Genre: <%=artist.genre%></h6>
                           <h6>Location: <%=artist.location%></h6>
                           <h6>Website: <a href="//<%=artist.website%>"><%=artist.website%></a></h6>
-                          <h6>Profile Picture: </h6> <img src="<%=artist.img%>">
                           <h6>Description: <%=artist.description%></h6>
                         </ul>
                       </h3>
@@ -141,23 +148,19 @@
                         <li> <a href="/user/<%=artist.usersWhoLike[i].id%>"> <%=artist.usersWhoLike[i].username%> </a></li>
                           <% } -%>
                       </ul>
-                    </div>
 
+                    </div>
                   </div>
                 </div>
               </div>
-
-              <div class="col-lg-12 col-sm-12">
-          			<a class="btn btn-outline-dark btn-sm btn-block" href="/artist/<%= artist.id %>/edit">Edit <%=artist.name%></a>
-          				<form action="/user/<%= artist.id %>?_method=DELETE" method="POST">
-          					<button class="btn btn-outline-danger btn-sm btn-block" type="submit">Delete <%=artist.name%></button>
-          			</form>
-          		</div>
-
             </div>
- 	       </main>
 
-
+          <div class="col-lg-12 col-sm-12">
+          	<a class="btn btn-outline-dark btn-sm btn-block" href="/artist/<%= artist.id %>/edit">Edit <%=artist.name%></a>
+          		<form action="/user/<%= artist.id %>?_method=DELETE" method="POST">
+          				<button class="btn btn-outline-danger btn-sm btn-block" type="submit">Delete <%=artist.name%></button>
+          		</form>
+          </div>
 
 
   <script src="/js/app.js"></script>
