--- a/views/event/index.ejs
+++ b/views/event/index.ejs
@@ -3,6 +3,7 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" href="../css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400,500,600,700|Work+Sans:200,400" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -13,9 +14,8 @@
 
 <body>
 	<header>
-		<nav class="navbar navbar-inverse">
+			<nav id="navbar">
 				<div class="container-fluid">
-
 						<ul class="nav navbar-left">
 							<li class="active"><a href="/">Home</a></li>
 							<li><a href="/user">Users</a></li>
@@ -30,29 +30,32 @@
 
 	<div class="jumbotron">
   <div class="container text-center">
-    <h1>Live Music Finder App</h1>
-    <p>Some dang ol' catchy byline will go here</p>
+    <h1 class = "indexHeader">Events</h1><br>
   </div>
 	</div>
 
-	<div class="container-fluid">
-	<h3 class= "text-center">Events</h3><br>
-		<div class="row justify-content-around">
-			<div class="col-6">
-				<ul>
+
+
+	<div class="d-flex justify-content-md-around">
+
 					<%for (let i = 0; i < events.length; i++) {%>
-						<li><p><a href="/event/<%=events[i].id%>"><%=events[i].name%></a></p><br />
-						<img src="<%=events[i].img%>" class="img-responsive" style="width:100%" alt="<%=events[i].name%> Image"></li>
-					<%}%>
-				</ul>
+
+									<div class="picContainer-fluid">
+										<div class="col-med-6">
+
+
+												<img src="<%=events[i].img%>" class="img-responsive" style="width:100%" alt="<%=events[i].name%> Image">
+
+													<div class="overlay">
+												<div class="linkText"> <p><a class="indexLink" href="/event/<%=events[i].id%>"><%=events[i].name%></a></p> </div>
+											</div>
+										</div>
+									</div>
+
+						<%}%>
+
 			</div>
 
-		</div>
-	</div>
-
-	<footer class="container-fluid text-center">
-		<p>Footer Here</p>
-	</footer>
 
 
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
