--- a/views/event/show.ejs
+++ b/views/event/show.ejs
@@ -13,7 +13,7 @@
 
 		<body>
 			<header>
-				<nav class="navbar navbar-inverse">
+				<nav id="navbar">
 						<div class="container-fluid">
 
 								<ul class="nav navbar-left">
@@ -33,39 +33,46 @@
 			</header>
 
 
-			<div class="col-lg-12 col-sm-12">
-			    <div class="card hovercard">
+
+
+			<div class="container-fluid">
+				<div class="col-lg-12 col-sm-12">
+					<div class="row justify-content-around">
+
+
+			    <div class="card-hovercard">
+
 			        <div class="card-background">
 			            <img class="card-bkimg" alt="<%=event.name%> Image" src="<%=event.img%>">
 			            <!-- Img here-->
-			        </div>
+			        	</div>
 
-			        <div class="card-info"> <span class="card-title"><h3> <%=event.name%> Info </h3></span>
+			        	<div class="card-info"> <span class="card-title"><h3> <%=event.name%></h3></span>
 
-			        		<%for (let i = 0; i < users.length; i++) {%>
-			        			<a href="/event/<%=event.id%>/addUser/<%=users[i].id%>">
-			        		<%}%>
-			        			<span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Attend <%=event.name%></a>
+			        			<%for (let i = 0; i < users.length; i++) {%>
+			        				<a href="/event/<%=event.id%>/addUser/<%=users[i].id%>">
+			        			<%}%>
+			        				<span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Attend <%=event.name%></a>
+			      	</div>
+			    	</div>
+					</div>
 
-
-			        </div>
-			    </div>
 			    <div class="btn-pref btn-group btn-group-justified btn-group-lg" role="group" aria-label="...">
 			        <div class="btn-group" role="group">
-			            <button type="button" id="stars" class="btn btn-primary" href="#tab1" data-toggle="tab"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+			            <button type="button" id="stars" class="btn btn-dark" href="#tab1" data-toggle="tab"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>
 			                <div class="hidden-xs">About</div>
 			            </button>
 			        </div>
 
 
 							<div class="btn-group" role="group">
-			            <button type="button" id="artists" class="btn btn-default" href="#tab2" data-toggle="tab"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+			            <button type="button" id="artists" class="btn btn-light" href="#tab2" data-toggle="tab"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
 			                <div class="hidden-xs">Artists</div>
 			            </button>
 			        </div>
 
 							<div class="btn-group" role="group">
-			            <button type="button" id="going" class="btn btn-default" href="#tab3" data-toggle="tab"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+			            <button type="button" id="going" class="btn btn-light" href="#tab3" data-toggle="tab"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
 			                <div class="hidden-xs">Going</div>
 			            </button>
 			        </div>
@@ -101,26 +108,19 @@
 		                        <li> <a href="/user/<%=event.usersAttending[i].id%>"> <%=event.usersAttending[i].username%> </a></li>
 		                          <% } -%>
 		                      </ul>
+
 					        </div>
-
-
-
-					      </div>
+					     </div>
 			    	</div>
-
 			    </div>
-
+				</div>
 
 				<div class="col-lg-12 col-sm-12">
-					<a class="btn btn-outline-dark btn-sm btn-block" href="/event/<%= event.id %>/edit">Edit Event</a>
+					<a class="btn btn-light btn-sm btn-block" href="/event/<%= event.id %>/edit">Edit Event</a>
 						<form action="/event/<%= event.id %>?_method=DELETE" method="POST">
 							<button class="btn btn-outline-danger btn-sm btn-block" type="submit">Delete Event</button>
 					</form>
 				</div>
-
-				<footer class="container-fluid text-center">
-			  		<p>Footer Here</p>
-				</footer>
 
 
 
