--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -64,7 +64,7 @@
                                <img src="http://placehold.it/1200x500/3498db/2980b9" alt="First slide">
                                <div class="carousel-caption">
                                    <h3>
-                                      Band name</h3>
+                                      User</h3>
                                    <p>
                                        dummy text</p>
                                </div>
@@ -73,7 +73,7 @@
                                <img src="http://placehold.it/1200x500/9b59b6/8e44ad" alt="Second slide">
                                <div class="carousel-caption">
                                    <h3>
-                                       Another band name</h3>
+                                       Artist</h3>
                                    <p>
                                        Different dummy text</p>
                                </div>
