--- a/views/artist/new.ejs
+++ b/views/artist/new.ejs
@@ -14,6 +14,7 @@
   <body>
 
       <header>
+        <nav id="navbar">
     		<nav class="navbar navbar-inverse">
     				<div class="container-fluid">
 
@@ -66,7 +67,7 @@
     					</form>
     				</div>
 
-            
+
         </div>
       </main>
 
