--- a/views/artist/show.ejs
+++ b/views/artist/show.ejs
@@ -81,7 +81,7 @@
                 </div>
 
                 <div class="btn-group" role="group">
-                    <button type="button" id="following" class="btn btn-default" href="#tab4" data-toggle="tab"><span class="glyphicon glyphicon-headphones" aria-hidden="true"></span>
+                    <button type="button" id="fans" class="btn btn-default" href="#tab4" data-toggle="tab"><span class="glyphicon glyphicon-headphones" aria-hidden="true"></span>
                         <div class="hidden-xs">Fans</div>
                     </button>
                 </div>
@@ -184,25 +184,17 @@
               </div>
             </div>
 
-<<<<<<< HEAD
           <div class="col-lg-12 col-sm-12">
           	<a class="btn btn-outline-dark btn-sm btn-block" href="/artist/<%= artist.id %>/edit">Edit <%=artist.name%></a>
           		<form action="/user/<%= artist.id %>?_method=DELETE" method="POST">
           				<button class="btn btn-outline-danger btn-sm btn-block" type="submit">Delete <%=artist.name%></button>
           		</form>
           </div>
-=======
-              <div class="col-lg-12 col-sm-12">
-          			<a class="btn btn-outline-dark btn-sm btn-block" href="/artist/<%= artist.id %>/edit">Edit <%=artist.name%></a>
-          				<form action="/artist/<%= artist.id %>?_method=DELETE" method="POST">
-          					<button class="btn btn-outline-danger btn-sm btn-block" type="submit">Delete <%=artist.name%></button>
-          			</form>
-          		</div>
+
 
  	       </main>
 
 
->>>>>>> 2768ee8e3970c503089b3bea374d88453ada8282
 
 
   <script src="/js/app.js"></script>
