--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -27,21 +27,17 @@
 							<li><a href="/artist/new"><span class="glyphicon glyphicon-plus"></span>Become an Artist</a></li>
 						</ul>
 					</div>
+				</nav>
+
+		<div id="index-jumbo">
+			<div class="jumbotron">
+  			<div class="container text-center">
+    			<h1 class = "indexHeader">Users</h2>
 				</div>
-			</nav>
-
+  		</div>
 		</div>
-	</header>
 
-
-	<div class="jumbotron">
-  <div class="container text-center">
-    <h2 class = "indexHeader">Users</h2>
-
-  </div>
-	</div>
-
-
+		</header>
 
   	<div class="d-flex justify-content-around">
 
