--- a/views/artist/index.ejs
+++ b/views/artist/index.ejs
@@ -29,11 +29,13 @@
 
 		</div>
 
-		<div class="jumbotron">
-	  <div class="container text-center">
-	    <h1 class= "indexHeader">Artists</h1>
-	  </div>
+		<div id="index-jumbo">
+			<div class="jumbotron">
+	  		<div class="container text-center">
+	    		<h1 class= "indexHeader">Artists</h1>
+	  	</div>
 		</div>
+	</div>
 
 
 	</header>
