--- a/views/event/show.ejs
+++ b/views/event/show.ejs
@@ -7,7 +7,8 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<style>
-			body { padding-top: 10px; };
+			body { padding-top: 10px;};
+
 		</style>
 		</head>
 
@@ -33,8 +34,6 @@
 			</header>
 
 
-
-
 			<div class="container-fluid">
 				<div class="col-lg-12 col-sm-12">
 					<div class="row justify-content-around">
@@ -49,7 +48,6 @@
 
 			        	<div class="card-info"> <span class="card-title"><h3> <%=event.name%></h3></span>
 
-<<<<<<< HEAD
 			        			<%for (let i = 0; i < users.length; i++) {%>
 			        				<a href="/event/<%=event.id%>/addUser/<%=users[i].id%>">
 			        			<%}%>
@@ -57,16 +55,8 @@
 			      	</div>
 			    	</div>
 					</div>
-=======
-								<% for (let i = 0; i < users.length; i++) { %>
-									<a href="/event/addUser/<%=users[i].id%>/<%=event.id%>"></a>
 
-								<% } %>
-			        		<%for (let i = 0; i < users.length; i++) {%>
-			        			<a href="/event/<%=event.id%>/addUser/<%=users[i].id%>">
-			        		<%}%>
-			        			<span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Attend <%=event.name%></a>
->>>>>>> 2768ee8e3970c503089b3bea374d88453ada8282
+
 
 			    <div class="btn-pref btn-group btn-group-justified btn-group-lg" role="group" aria-label="...">
 			        <div class="btn-group" role="group">
@@ -77,7 +67,7 @@
 
 
 							<div class="btn-group" role="group">
-			            <button type="button" id="artists" class="btn btn-light" href="#tab2" data-toggle="tab"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+			            <button type="button" id="eventArtists" class="btn btn-light" href="#tab2" data-toggle="tab"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
 			                <div class="hidden-xs">Artists</div>
 			            </button>
 			        </div>
