--- a/views/user/show.ejs
+++ b/views/user/show.ejs
@@ -66,7 +66,7 @@
 	            </button>
 	        </div>
 					<div class="btn-group" role="group">
-	            <button type="button" id="following" class="btn btn-default" href="#tab4" data-toggle="tab"><span class="glyphicon glyphicon-headphones" aria-hidden="true"></span>
+	            <button type="button" id="affiliatedArtists" class="btn btn-default" href="#tab4" data-toggle="tab"><span class="glyphicon glyphicon-headphones" aria-hidden="true"></span>
 	                <div class="hidden-xs">Artists</div>
 	            </button>
 	        </div>
