--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,17 +7,20 @@
 #navbar a:hover {
   background-color: rgba(46, 57, 62, 0.83);
 }
-a {
+a,
+#user-carousel,
+#artist-carousel,
+#event-carousel {
   text-decoration: none;
   color: white;
 }
-a:hover {
+a:hover,
+#user-carousel:hover,
+#artist-carousel:hover,
+#event-carousel:hover {
   text-decoration: none;
 }
 ul {
-<<<<<<< HEAD
-  list-style-type: none;
-=======
   list-style: none;
 }
 /* INDEXES */
@@ -101,5 +104,4 @@ ul {
 }
 #carousel {
   font-family: 'IBM Plex Sans', sans-serif;
->>>>>>> zoe
 }
