--- a/public/less/style.less
+++ b/public/less/style.less
@@ -17,7 +17,22 @@ html {
 	}
 }
 
+#logout {
+	background-color: #ff7043;
+	color: white;
 
+	&:hover {
+		background-color: #ffa270;
+		transition: .5s ease;
+	}
+}
+
+#edit-user, #edit-artist, #edit-event {
+	&:hover {
+		color: white;
+		transition: .5s ease;
+	}
+}
 
 a, #user-carousel, #artist-carousel, #event-carousel {
 	text-decoration: none;
