--- a/views/artist/edit.ejs
+++ b/views/artist/edit.ejs
@@ -65,6 +65,9 @@
       </div>
     </main>
 
+  <footer class="container-fluid text-center">
+    <button class="btn-block" id="logout">Log Out</button>
+  </footer>
 
   </body>
 </html>
