--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -56,8 +56,9 @@
 
 
 
-
-
+	<footer class="container-fluid text-center">
+		<button class="btn-block" id="logout">Log Out</button>
+	</footer>
 
 
 </body>
