--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -56,7 +56,9 @@
 					<%}%>
 				</div>
 
-
+	<footer class="container-fluid text-center">
+		<button class="btn-block" id="logout">Log Out</button>
+	</footer>
 
 
 <script src="/js/app.js"></script>
