--- a/views/artist/new.ejs
+++ b/views/artist/new.ejs
@@ -71,7 +71,9 @@
         </div>
       </main>
 
-
+  <footer class="container-fluid text-center">
+    <button class="btn-block" id="logout">Log Out</button>
+  </footer>
 
   </body>
 </html>
