--- a/views/event/index.ejs
+++ b/views/event/index.ejs
@@ -58,6 +58,9 @@
 
 			</div>
 
+	<footer class="container-fluid text-center">
+		<button class="btn-block" id="logout">Log Out</button>
+	</footer>
 
 
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
