--- a/views/event/new.ejs
+++ b/views/event/new.ejs
@@ -62,5 +62,9 @@
 
   	</main>
 
+  	<footer class="container-fluid text-center">
+		<button class="btn-block" id="logout">Log Out</button>
+	</footer>
+
 </body>
 </html>
