--- a/views/event/show.ejs
+++ b/views/event/show.ejs
@@ -121,7 +121,7 @@
 				</div>
 
 				<div class="col-lg-12 col-sm-12">
-					<a class="btn btn-light btn-sm btn-block" href="/event/<%= event.id %>/edit">Edit Event</a>
+					<a class="btn btn-light btn-sm btn-block" id="edit-event" href="/event/<%= event.id %>/edit">Edit Event</a>
 						<form action="/event/<%= event.id %>?_method=DELETE" method="POST">
 							<button class="btn btn-outline-danger btn-sm btn-block" type="submit">Delete Event</button>
 					</form>
@@ -134,7 +134,9 @@
 
 
 
-
+	<footer class="container-fluid text-center">
+		<button class="btn-block" id="logout">Log Out</button>
+	</footer>
 
 
 
