added logout button functionality; display looks correct

--- a/views/artist/show.ejs
+++ b/views/artist/show.ejs
@@ -194,9 +194,11 @@
  	       </main>
 
   <footer class="container-fluid text-center">
-    <button class="btn-block" id="logout">Log Out</button>
+    <form action="/logout" method="GET">
+        <input type="submit" class="btn-block" id="logout" value="Logout" />
+    </form>
   </footer>
-
+  
   <script src="/js/app.js"></script>
   </body>
 </html>
