--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -57,7 +57,9 @@
 				</div>
 
 	<footer class="container-fluid text-center">
-		<button class="btn-block" id="logout">Log Out</button>
+		<form action="/logout" method="GET">
+   			<input type="submit" class="btn-block" id="logout" value="Logout" />
+		</form>
 	</footer>
 
 
