--- a/views/artist/index.ejs
+++ b/views/artist/index.ejs
@@ -64,7 +64,9 @@
 			</main>
 
 	<footer class="container-fluid text-center">
-		<button class="btn-block" id="logout">Log Out</button>
+		<form action="/logout" method="GET">
+   			<input type="submit" class="btn-block" id="logout" value="Logout" />
+		</form>
 	</footer>
 
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
