--- a/views/artist/new.ejs
+++ b/views/artist/new.ejs
@@ -72,7 +72,9 @@
       </main>
 
   <footer class="container-fluid text-center">
-    <button class="btn-block" id="logout">Log Out</button>
+    <form action="/logout" method="GET">
+        <input type="submit" class="btn-block" id="logout" value="Logout" />
+    </form>
   </footer>
 
   </body>
