--- a/views/event/index.ejs
+++ b/views/event/index.ejs
@@ -59,9 +59,11 @@
 			</div>
 
 	<footer class="container-fluid text-center">
-		<form action="/logout" method="GET">
-   			<input type="submit" class="btn-block" id="logout" value="Logout" />
-		</form>
+		<%if (loggedIn) { %>
+			<form action="/logout" method="GET">
+	   			<input type="submit" class="btn-block" id="logout" value="Logout" />
+			</form>
+		<%}%>
 	</footer>
 
 
