--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -57,9 +57,12 @@
 				</div>
 
 	<footer class="container-fluid text-center">
-		<form action="/logout" method="GET">
-   			<input type="submit" class="btn-block" id="logout" value="Logout" />
-		</form>
+		<%if (loggedIn) { %>
+			<form action="/logout" method="GET">
+	   			<input type="submit" class="btn-block" id="logout" value="Logout" />
+			</form>
+		<%}%>
+		
 	</footer>
 
 
