--- a/views/user/show.ejs
+++ b/views/user/show.ejs
@@ -39,7 +39,7 @@
 	    		<div class="card hovercard">
 
 	        	<div class="card-background">
-	            <img class="card-bkimg" alt="<%=user.username%>'s Avatar" src="<%=user.avatar%>">
+	            <img id="userListPic" class="card-bkimg" alt="<%=user.username%>'s Avatar" src="<%=user.avatar%>">
 	            <!-- Img here-->
 	        	</div>
 
