--- a/public/less/style.less
+++ b/public/less/style.less
@@ -3,6 +3,7 @@
 @linkFont: 'Work Sans', sans-serif;
 @textFont: 'IBM Plex Sans', sans-serif;
 
+
 html {
 	background-color: #eceff1;
 }
@@ -111,10 +112,14 @@ ul {
 
 
 //show page card
-
-.card-hovercard {
+.container-fluid{
+	background-color: ##cfd8dc;
+}
+#card-hovercard {
 	padding: 10px 5px;
 	align-content: center;
+	border-style: none;
+	background-color: ##cfd8dc;
 }
 
 .card-background {
