--- a/views/artist/show.ejs
+++ b/views/artist/show.ejs
@@ -43,11 +43,11 @@
           <div class="col-lg-12 col-sm-12">
             <div class="row justify-content-around">
 
-              <div class="card hovercard">
+              <div id="card hovercard">
 
 
                   <div class="card-background">
-                    <img class="card-bkimg" alt="<%=artist.name%>'s Avatar" src="<%=artist.img%>">
+                    <img id= "artistListPic" class="card-bkimg" alt="<%=artist.name%>'s Avatar" src="<%=artist.img%>">
                   </div>
 
                   <div class="card-info"> <span class="card-title"><h3><%=artist.name%></h3></span>
@@ -191,7 +191,7 @@
           		</div>
 
  	       </main>
-         
+
   <footer class="container-fluid text-center">
     <form action="/logout" method="GET">
         <input type="submit" class="btn-block" id="logout" value="Logout" />
