--- a/views/event/show.ejs
+++ b/views/event/show.ejs
@@ -42,7 +42,7 @@
 			    <div class="card-hovercard">
 
 			        <div class="card-background">
-			            <img class="card-bkimg" alt="<%=event.name%> Image" src="<%=event.img%>">
+			            <img id="eventListPic" class="card-bkimg" alt="<%=event.name%> Image" src="<%=event.img%>">
 			            <!-- Img here-->
 			        	</div>
 
