--- a/views/auth/home.ejs
+++ b/views/auth/home.ejs
@@ -110,7 +110,7 @@
                                <%} else {%>
                                  <img id= "eventListPic" alt="<%=events[eventNum].name%> Image" src="<%=events[eventNum].img%>">
                                    <h3>
-                                       <a id="event-carousel" href="/event"><%=events[eventtNum].name%></a></h3>
+                                       <a id="event-carousel" href="/event"><%=events[eventNum].name%></a></h3>
                                    <p><%=events[eventNum].description%></p>
 
                                <%}%>
