--- a/views/user/show.ejs
+++ b/views/user/show.ejs
@@ -106,7 +106,7 @@
 			          <h3>Affiliated Artists</h3>
 			          		<ul>
       							<% for (let i = 0; i < user.artists.length; i++) { -%>
-        							<li><a href="/artist/<%=user.artists[i].id%>"><%= user.artists[i].name%></li>
+        							<li><a href="/artist/<%=user.artists[i].artist_id%>"><%= user.artists[i].name%></li>
       							<% } -%>
       						</ul>
 			        </div>
