--- a/views/event/show.ejs
+++ b/views/event/show.ejs
@@ -97,7 +97,7 @@
 					          <h3>Affiliated Artists</h3>
 					          	<ul>
 						          	<% for (let i = 0; i < event.hostArtists.length; i++) { -%>
-						          		<li><a href="/artist/<%=event.hostArtists[i].id%>"><%=event.hostArtists[i].name%></a></li>
+						          		<li><a href="/artist/<%=event.hostArtists[i].artist_id%>"><%=event.hostArtists[i].name%></a></li>
 						          	<% } -%>
 					          	</ul>
 					        </div>
@@ -116,10 +116,14 @@
 				</div>
 
 				<div class="col-lg-12 col-sm-12">
-					<a class="btn btn-light btn-sm btn-block" id="edit-event" href="/event/<%= event.id %>/edit">Edit Event</a>
-						<form action="/event/<%= event.id %>?_method=DELETE" method="POST">
-							<button class="btn btn-outline-danger btn-sm btn-block" type="submit">Delete Event</button>
-					</form>
+					<%for (let i = 0; i < bandMembers.length; i++) {%>
+						<%if (bandMembers[i]._id.toString() === user._id.toString()) {%>
+							<a class="btn btn-light btn-sm btn-block" id="edit-event" href="/event/<%= event.id %>/edit">Edit Event</a>
+								<form action="/event/<%= event.id %>?_method=DELETE" method="POST">
+									<button class="btn btn-outline-danger btn-sm btn-block" type="submit">Delete Event</button>
+								</form>
+						<%}%>
+					<%}%>
 				</div>
 
 
