--- a/views/user/show.ejs
+++ b/views/user/show.ejs
@@ -97,16 +97,15 @@
 			          <h3>Events Attending</h3>
 			          		<ul>
       							<% for (let i = 0; i < user.eventsAttending.length; i++) { -%>
-        							<li><a href="/event/<%=user.eventsAttending[i].id%>"><%= user.eventsAttending[i].name%></li>
+        							<li><a href="/event/<%=user.eventsAttending[i].id%>"><%= user.eventsAttending[i].name%></a></li>
       							<% } -%>
       						</ul>
 			        </div>
-
 					<div class="tab-pane fade in" id="tab4">
 			          <h3>Affiliated Artists</h3>
 			          		<ul>
       							<% for (let i = 0; i < user.artists.length; i++) { -%>
-        							<li><a href="/artist/<%=user.artists[i].artist_id%>"><%= user.artists[i].name%></li>
+        							<li><a href="/artist/<%=user.artists[i].artist_id%>"><%= user.artists[i].name%></a></li>
       							<% } -%>
       						</ul>
 			        </div>
