made artist like and event attend links look like buttons

--- a/public/less/style.less
+++ b/public/less/style.less
@@ -18,6 +18,16 @@ html {
 	}
 }
 
+#like-button, #event-button {
+	background-color: #607d8b;
+	color: white;
+	border: none;
+	&:hover {
+		background-color: #8eacbb;
+		transition: .5s ease;
+	}
+}
+
 #logout {
 	background-color: #ff7043;
 	color: white;
