--- a/views/event/show.ejs
+++ b/views/event/show.ejs
@@ -48,10 +48,10 @@
 
 			        	<div class="card-info"> <span class="card-title"><h3> <%=event.name%></h3></span>
 
-			        			<%for (let i = 0; i < users.length; i++) {%>
-			        				<a href="/event/<%=event.id%>/addUser/<%=users[i].id%>">
-			        			<%}%>
-			        				<span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Attend <%=event.name%></a>
+								<form action="/event/<%=event.id%>/addUser/<%=user.id%>" method="GET">
+			                      <input type="submit" class="btn btn-info btn-lg" id="event-button" value="&plus; Attend <%=event.name%>" />
+			                    </form>
+			        			
 			      	</div>
 			    	</div>
 					</div>
